--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,6 +46,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="./js/scripts.js"></script>
+    <script src="./js/fabric.js"></script>
+    <script src="./js/fabric.min.js"></script>
 </body>
 
 </html>
